--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,19 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "from numpy import unique\n",
+    "from numpy import where\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from sklearn.cluster import Birch\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.metrics import calinski_harabasz_score\n",
+    "from sklearn.metrics import davies_bouldin_score\n",
+    "from IPython.display import display,HTML"
    ]
   },
   {
@@ -937,13 +949,11 @@
    ],
    "source": [
     "# standardization of values\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "X = score_dataframe[['Recency', 'Monetary Value', 'Frequency']]\n",
     "sc_X = StandardScaler()\n",
     "X_scd = sc_X.fit_transform(X)\n",
     "\n",
     "# Using the elbow method to find the optimal number of clusters\n",
-    "from sklearn.cluster import KMeans\n",
     "wcss = []\n",
     "for i in range(1, 11):\n",
     "    kmeans = KMeans(n_clusters = i, init = 'k-means++', random_state = 42)\n",
@@ -1072,13 +1082,9 @@
    "execution_count": 323,
    "outputs": [],
    "source": [
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.metrics import davies_bouldin_score\n",
-    "from sklearn.metrics import calinski_harabasz_score\n",
-    "\n",
     "score_kmeans_s = silhouette_score(X_scd, kmeans.labels_, metric='euclidean')\n",
     "score_kmeans_c = calinski_harabasz_score(X_scd, kmeans.labels_)\n",
-    "score_kmeans_d = davies_bouldin_score(X_scd, y_kmeans)\n"
+    "score_kmeans_d = davies_bouldin_score(X_scd, y_kmeans)"
    ],
    "metadata": {
     "collapsed": false
@@ -1109,7 +1115,6 @@
    ],
    "source": [
     "# Using the dendrogram to find the optimal number of clusters\n",
-    "import scipy.cluster.hierarchy as sch\n",
     "dendrogram = sch.dendrogram(sch.linkage(X_scd, method = 'ward'))\n",
     "# Ward's method: distance between two clusters A and B is how much the sum of squares will increase when we merge them\n",
     "# single for min distance\n",
@@ -1144,7 +1149,6 @@
    "outputs": [],
    "source": [
     "# Fitting Hierarchical Clustering to the dataset\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
     "hc = AgglomerativeClustering(n_clusters = 4, affinity = 'euclidean', linkage = 'ward')\n",
     "y_hc = hc.fit_predict(X_scd)"
    ],
@@ -1231,10 +1235,6 @@
    "execution_count": 352,
    "outputs": [],
    "source": [
-    "from numpy import unique\n",
-    "from numpy import where\n",
-    "from sklearn.mixture import GaussianMixture\n",
-    "\n",
     "#Gaussian mixture model\n",
     "gmm= GaussianMixture(n_components=4)\n",
     "gmm.fit(X_scd)  # fit the model\n",
@@ -1300,18 +1300,12 @@
    "execution_count": 330,
    "outputs": [],
    "source": [
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.metrics import calinski_harabasz_score\n",
-    "from sklearn.metrics import davies_bouldin_score\n",
     "score_gmm_s = silhouette_score(X_scd, y_gmm, metric='euclidean')\n",
     "score_gmm_c = calinski_harabasz_score(X_scd, y_gmm)\n",
     "score_gmm_d = davies_bouldin_score(X_scd, y_gmm)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1330,8 +1324,6 @@
    "outputs": [],
    "source": [
     "# birch clustering\n",
-    "from sklearn.cluster import Birch\n",
-    "\n",
     "birch = Birch(threshold=0.01, n_clusters=4)\n",
     "birch.fit(X_scd)    # fit the model\n",
     "y_birch = birch.predict(X_scd)  # assign a cluster to each example\n",
@@ -1584,7 +1576,7 @@
    ],
    "source": [
     "#description of clusters created with Kmeans\n",
-    "from IPython.display import display,HTML\n",
+    "\n",
     "data = X.assign(ClusterLabel = kmeans.labels_)\n",
     "x_r=data.groupby(\"ClusterLabel\")[[\"Recency\"]].describe()\n",
     "x_r.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
@@ -1597,10 +1589,7 @@
     "display(x_r)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
