--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.metrics import calinski_harabasz_score\n",
     "from sklearn.metrics import davies_bouldin_score\n",
-    "from IPython.display import display,HTML"
+    "from IPython.display import display"
    ]
   },
   {
