--- a/main.ipynb
+++ b/main.ipynb
@@ -1263,8 +1263,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This method creates slightly different clusters,\n",
-    "looking at the 3D graph we can analyze them in depth:\n",
+    "This method creates slightly different clusters, looking at the 3D graph we can analyze them in depth:\n",
     "The **first cluster (yellow)** contains inactive customers that have made a few purchases a long time ago.\n",
     "The **second one (blue)** is very similar to the **third one (green)**, making us think the clustering isn't that efficient, and they contain new customers that have made a few purchases and therefore haven't spent that much, moreover they have shopped recently.\n",
     "The last **cluster (cyan)** probably contains usual customers, that have in fact shopped very frequently and recently but have for some reasons spent not that much on their orders.\n"
