--- a/main.ipynb
+++ b/main.ipynb
@@ -1336,7 +1336,8 @@
     "As the plot shows the clusters are really different to each others.\n",
     "The first cluster contains customers with low recency, high frequency and medium monetary values.\n",
     "The second one contains only a few customers with medium recency, high frequency and high monetary value.\n",
-    "The third one is really consistent and represents a large variety of customers, many with both low and high recency, a relatevely low frequency and a low monetary value.\n"
+    "The third one is really consistent and represents a large variety of customers, many with both low and high recency, a relatively low frequency and a low monetary value.\n",
+    "The fourth cluster is very small, (we check later its size) and it represents customers with a low recency, high frequency and high monetary value.\n"
    ],
    "metadata": {
     "collapsed": false
