--- a/main.ipynb
+++ b/main.ipynb
@@ -1034,7 +1034,7 @@
     "The **first (yellow)** cluster represents probably inactive customers that have made a few purchases a long time ago.\n",
     "The **second one (blue)** contains active customers (low recency) that have made purchases many times.\n",
     "The **third (green)** cluster contains new customers that in fact have not spent much, have a low frequency but have made purchases recently.\n",
-    "Finally, the **fourth (cyan)** cluster is quite similar to the blue one, besides the fact that their monetary value is relatively higher. This implies that they are probably very active usual customers.\n"
+    "Finally, the **fourth (cyan)** cluster is quite similar to the blue one, besides the fact that their monetary value is relatively higher. This implies that they are probably very active regular customers.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1253,7 +1253,7 @@
     "This method creates slightly different clusters, looking at the 3D graph we can analyze them in depth:\n",
     "The **first cluster (yellow)** contains inactive customers that have made a few purchases a long time ago.\n",
     "The **second one (blue)** is very similar to the **third one (green)**, making us think the clustering isn't that efficient, and they contain new customers that have made a few purchases and therefore haven't spent that much, moreover they have shopped recently.\n",
-    "The last **cluster (cyan)** probably contains usual customers, that have in fact shopped very frequently and recently but have for some reasons spent not that much on their orders.\n"
+    "The last **cluster (cyan)** probably contains regular-high spender customers, that have in fact shopped very frequently and recently but have for some reasons spent not that much on their orders.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1745,7 +1745,7 @@
     "The first one represents inactive customers that have made a few purchases typically a long time ago.\n",
     "The second one represents active customers that have made purchases many times, also recently, and have spent a fair amount on their purchases.\n",
     "The third cluster represents new customers that have purchased very recently (they have in fact the lowest recency value) and have not spent much, because they haven't made frequent transactions yet.\n",
-    "Finally, the fourth cluster represents usual/ loyal customers, they shop really frequently and spend a large amount of money on their orders (they have the highest monetary value)."
+    "Finally, the fourth cluster represents regular-high spender customers, they shop really frequently and spend a large amount of money on their orders (they have the highest monetary value)."
    ],
    "metadata": {
     "collapsed": false,
