--- a/main.ipynb
+++ b/main.ipynb
@@ -298,26 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/xr/fxzmlkxj7hj_7ywm0m_3sf8w0000gn/T/ipykernel_29189/24655691.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  csdv_df_new.drop_duplicates(keep='first', inplace=True)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "csdv_df_new.drop_duplicates(keep='first', inplace=True)\n",
     "csdv_df_new.reset_index(drop=True, inplace=True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
